[package]
name = "litebrite"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
